--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,7 +5,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     uploads: '../public/uploads'
-    default: '../public/uploads/default.jpg'
+    default: '../public/img/pfp_default.jpg'
 services:
     # default configuration for services in *this* file
     _defaults:
