--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,8 +4,8 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-    uploads: '../public/uploads'
-    default: '../public/img/pfp_default.jpg'
+    uploads: 'uploads/'
+    default: 'pfp_default.jpg'
 services:
     # default configuration for services in *this* file
     _defaults:
