--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
         "core-js": "^3.0.0",
         "jquery": "^3.6.0",
         "regenerator-runtime": "^0.13.2",
+        "sass": "^1.49.8",
+        "sass-loader": "12.0.0",
         "webpack-notifier": "^1.6.0"
     },
     "license": "UNLICENSED",
